--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>mobimoveEmployee</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>mobimoveEmployee</name>
+	<packaging>jar</packaging>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -54,6 +55,7 @@
 	</dependencies>
 
 	<build>
+	<finalName>mobimoveEmployee</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
