--- a/jenkinsfile
+++ b/jenkinsfile
@@ -106,7 +106,7 @@ pipeline {
 		
 			steps {
 				script {
-					sh 'docker run -p9090:9090 mobimove-employee-api-${BUILD_NUMBER}'
+					sh 'docker run -d -p 9090:9090 mobimove-employee-api-${BUILD_NUMBER}'
 				
 				}
 			
