--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<dependency>
+   			 <groupId>org.springframework.vault</groupId>
+    		<artifactId>spring-vault-core</artifactId>
+    		<version>2.2.2.RELEASE</version>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
