add new message

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -130,6 +130,6 @@ pipeline {
 			//}
 		
 		//}
-	//This is a test to see if authomatic trigger is running.
+	//This is a test to see if authomatic trigger is running again
 	}
 }
